[package]
name = "pubserve"
license = "MPL-2.0"
version = "1.1.0"
edition = "2021"
authors = ["bitfl0wer <flori@polyphony.chat>"]
description = "Simple, generic observer trait."
keywords = ["observer"]
rust-version = "1.61"

[lib]
doctest = false

[features]
default = []
send = []
async = ["async-trait"]
async-trait = ["dep:async-trait"]

[dependencies]
async-trait = { version = "0.1.81", optional = true }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt"] }
